--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,15 @@ dependencies {
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // CameraX
+    def camerax_version = "1.3.0-alpha06"
+
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-video:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation "androidx.camera:camera-mlkit-vision:${camerax_version}"
+    implementation "androidx.camera:camera-extensions:${camerax_version}"
 }
