--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,9 @@ dependencies {
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-mlkit-vision:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
+
+
+    // Detect poses with ML Kit
+    implementation 'com.google.mlkit:pose-detection:18.0.0-beta3'
+    implementation 'com.google.mlkit:pose-detection-accurate:18.0.0-beta3'
 }
